<resources>
    <string name="app_name">MaterialWanAndroid</string>
    <string name="welcome_to">欢迎来到</string>
    <string name="wanandroid">玩安卓</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="please_input_your_username">请输入账号名字</string>
    <string name="please_input_your_password">请输入账号密码</string>
    <string name="home">首页</string>
    <string name="public_">公众号</string>
    <string name="knowledge">知识体系</string>
    <string name="project">项目</string>
    <string name="to_top">置顶</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="success_collect">收藏成功</string>
    <string name="cancel">取消</string>
    <string name="transition_name_search">search</string>
    <string name="transition_name_collect">collect</string>
    <string name="transition_name_web">web</string>
    <string name="to_search">搜索</string>
    <string name="search_hot_key">搜索热词</string>
    <string name="switch_theme">切换主题(alpha)</string>
    <string name="confirm">确定</string>
    <string name="search_recently">最近搜索</string>
    <string name="clear_all">清空</string>
    <string name="search_result">搜索结果</string>
    <string name="collect">收藏</string>
    <string name="personal_point">个人积分:</string>
    <string name="flutter">Flutter</string>
</resources>
