<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="Main"
            type="com.show.wanandroid.ui.login.fragment.LoginContainerFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/login_container"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitle"
            android:transitionName="title"
            android:text="@string/welcome_to"
            android:textSize="@dimen/px85dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tvWelcome"
            android:text="@string/wanandroid"
            android:textSize="@dimen/px105dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px185dp"
            app:backgroundTint="@color/white"
            app:strokeColor="@color/colorAccent"
            app:strokeWidth="@dimen/px2dp"
            app:cornerRadius="@dimen/px25dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="@dimen/px55dp"
            app:iconTint="@color/colorAccent"
            app:icon="@drawable/ic_login"
            app:iconSize="@dimen/px82dp"
            android:gravity="center"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="@color/colorAccent"
            android:layout_marginEnd="@dimen/px110dp"
            android:layout_marginStart="@dimen/px110dp"
            android:layout_marginBottom="@dimen/px10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister"
            android:onClick="@{()->Main.onLogin()}"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px185dp"
            app:backgroundTint="@color/white"
            app:elevation="@dimen/px3dp"
            android:text="@string/register"
            android:textStyle="bold"
            android:textSize="@dimen/px55dp"
            app:cornerRadius="@dimen/px25dp"
            app:iconTint="@color/colorAccent"
            app:icon="@drawable/ic_register"
            app:iconSize="@dimen/px82dp"
            android:gravity="center"
            app:strokeColor="@color/colorAccent"
            app:strokeWidth="@dimen/px2dp"
            android:textColor="@color/colorAccent"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_marginEnd="@dimen/px110dp"
            android:layout_marginStart="@dimen/px110dp"
            android:layout_marginBottom="@dimen/px250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{()->Main.onRegister()}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>