<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="Main"
            type="com.show.wanandroid.ui.main.fragment.SearchBodyFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchBody"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvHot"
            android:text="@string/search_hot_key"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/px52dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="@dimen/px50dp"
            android:layout_marginStart="@dimen/px48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            skin="@{`textColor`}"
            />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px48dp"
            android:layout_marginEnd="@dimen/px48dp"
            android:layout_marginStart="@dimen/px48dp"
            app:layout_constraintTop_toBottomOf="@+id/tvHot"
            plugin="@{`SearchChipGroup`}"
            />

        <TextView
            android:id="@+id/tvRecently"
            android:text="@string/search_recently"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/px52dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="@dimen/px150dp"
            android:layout_marginStart="@dimen/px48dp"
            app:layout_constraintTop_toBottomOf="@+id/group"
            app:layout_constraintStart_toStartOf="parent"
            skin="@{`textColor`}"
            />

        <TextView
            android:id="@+id/tvDelete"
            android:text="@string/clear_all"
            android:textSize="@dimen/px40dp"
            android:textColor="@color/text_999999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/px48dp"
            app:layout_constraintTop_toTopOf="@+id/tvRecently"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{()->Main.clearAll()}"
            />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/reGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px48dp"
            android:layout_marginEnd="@dimen/px48dp"
            android:layout_marginStart="@dimen/px48dp"
            app:layout_constraintTop_toBottomOf="@+id/tvRecently"
            plugin="@{`SearchChipGroup`}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>