<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="Main"
            type="com.show.wanandroid.ui.main.fragment.MainFragment" />


    </data>

    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                app:layout_constraintTop_toTopOf="parent"
                skin="@{`backgroundColor`}"
                />


            <RelativeLayout
                android:id="@+id/titleBar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px125dp"
                android:background="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@+id/toolBar"
                skin="@{`backgroundColor`}"
                >

                <com.show.wanandroid.widget.IconSwitch
                    android:id="@+id/iconSwitch"
                    android:layout_width="@dimen/px60dp"
                    android:layout_height="@dimen/px60dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/px48dp"
                    android:tint="@color/white"
                    app:clickToTransition="false"
                    app:defaultTint="@color/white"
                    app:iconDefault="@drawable/ic_drawable"
                    app:iconTransition="@drawable/ic_more"
                    app:transitionTint="@color/white" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/home"
                    android:textColor="@color/white"
                    android:textSize="@dimen/px53dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivSearch"
                    android:transitionName="@string/transition_name_search"
                    android:layout_width="@dimen/px90dp"
                    android:layout_height="@dimen/px90dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/px48dp"
                    android:src="@drawable/ic_search"
                    android:tint="@color/white"
                    android:onClick="@{()->Main.search()}"
                    />

            </RelativeLayout>


            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/titleBar"
                app:layout_constraintBottom_toTopOf="@+id/bottomView"
                />


            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px150dp"
                android:background="@color/white"
                app:itemIconTint = "@color/colorAccent"
                app:itemTextColor="@color/colorAccent"
                app:menu="@menu/tab_menu"
                app:layout_constraintTop_toBottomOf="@+id/vp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                skin="@{`iconTint|textColor`}"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/drawLayout"
            android:elevation="@dimen/px5dp"
            android:layout_gravity="start"
            android:background="@color/white"
            android:layout_width="@dimen/px500dp"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/head"
                android:background="@drawable/shape_drawer_head_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px500dp"
                app:layout_constraintTop_toTopOf="parent"
                skin="@{`background`}"
                >


                <ImageView
                    android:id="@+id/ivHead"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/px40dp"
                    android:layout_width="@dimen/px155dp"
                    android:layout_height="@dimen/px155dp"
                    android:src="@drawable/ic_head"
                    android:tint="@color/white"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvUserName"
                    android:textSize="@dimen/px42dp"
                    android:textColor="@color/white"
                    android:layout_below="@+id/ivHead"
                    android:text="UserName"
                    android:layout_marginTop="@dimen/px15dp"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fontFamily="sans-serif-light"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvLogin"
                    android:textSize="@dimen/px75dp"
                    android:textColor="@color/white"
                    android:text="@string/login"
                    android:visibility="gone"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/px40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fontFamily="sans-serif"
                    android:onClick="@{()->Main.onLogin()}"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvPoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvUserName"
                    android:textColor="@color/white"
                    android:textSize="@dimen/px37dp"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginTop="@dimen/px22dp"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTheme"
                android:text="@string/switch_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_theme"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/px43dp"
                android:gravity="center|start"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:layout_constraintTop_toBottomOf="@+id/head"
                android:onClick="@{()->Main.onTheme()}"
                skin="@{`iconTint|textColor|rippleColor`}"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCollect"
                android:text="@string/collect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_collected"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/px43dp"
                android:gravity="center|start"
                android:layout_marginTop="@dimen/px15dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:layout_constraintTop_toBottomOf="@+id/btnTheme"
                android:onClick="@{()->Main.onCollect()}"
                skin="@{`iconTint|textColor|rippleColor`}"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.drawerlayout.widget.DrawerLayout>

</layout>